tests/dataset/tpc-ds/compiler/c/q50.error
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c: In function ‘test_TPCDS_Q50_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:270:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  270 |   if (test_TPCDS_Q50_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:274:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  274 |       if (test_TPCDS_Q50_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:329:7: warning: implicit declaration of function ‘joined_item_list_t_create’ [-Wimplicit-function-declaration]
  329 |       joined_item_list_t_create(store_sales.len * store_returns.len *
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:329:44: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  329 |       joined_item_list_t_create(store_sales.len * store_returns.len *
      |                                            ^
      |                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:329:64: error: ‘(store_return_t *)&store_returns’ is a pointer; did you mean to use ‘->’?
  329 |       joined_item_list_t_create(store_sales.len * store_returns.len *
      |                                                                ^
      |                                                                ->
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:330:41: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  330 |                                 date_dim.len * date_dim.len * store.len);
      |                                         ^
      |                                         ->
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:330:56: error: ‘(date_dim_t *)&date_dim’ is a pointer; did you mean to use ‘->’?
  330 |                                 date_dim.len * date_dim.len * store.len);
      |                                                        ^
      |                                                        ->
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:330:68: error: ‘(store_t *)&store’ is a pointer; did you mean to use ‘->’?
  330 |                                 date_dim.len * date_dim.len * store.len);
      |                                                                    ^
      |                                                                    ->
/tmp/TestCCompiler_TPCDS_Goldenq503504409114/001/prog.c:399:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  399 |   test_TPCDS_Q50_simplified_result = result;
      |                                      ^~~~~~
